checkpoint for migrating labels over
